--- a/StudioViews/StudioViews/StudioViews.csproj
+++ b/StudioViews/StudioViews/StudioViews.csproj
@@ -1,38 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{97D7CCCE-0311-4027-9BC0-E5ACC4EC7C48}</ProjectGuid>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sdl.Community.StudioViews</RootNamespace>
     <AssemblyName>Sdl.Community.StudioViews</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
@@ -41,8 +16,6 @@
     <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="Rws.MultiSelectComboBox">
       <HintPath>ThirdParty\Rws.MultiSelectComboBox.dll</HintPath>
@@ -52,9 +25,6 @@
     </Reference>
     <Reference Include="Sdl.Core.Globalization.Async">
       <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
-    </Reference>
-    <Reference Include="Sdl.Core.Settings">
-      <HintPath>$(TradosFolder)\Sdl.Core.Settings.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi">
       <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
@@ -74,9 +44,6 @@
     <Reference Include="Sdl.FileTypeSupport.Framework.Core">
       <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Sdl.FileTypeSupport.Framework.Core.Settings">
-      <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.Settings.dll</HintPath>
-    </Reference>
     <Reference Include="Sdl.FileTypeSupport.Framework.Core.Utilities">
       <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.Utilities.dll</HintPath>
     </Reference>
@@ -92,9 +59,6 @@
     <Reference Include="Sdl.ProjectAutomation.FileBased">
       <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
     </Reference>
-    <Reference Include="Sdl.ProjectAutomation.Settings">
-      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Settings.dll</HintPath>
-    </Reference>
     <Reference Include="Sdl.TellMe.ProviderApi">
       <HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
     </Reference>
@@ -107,123 +71,6 @@
     <Reference Include="Sdl.Versioning">
       <HintPath>$(TradosFolder)\Sdl.Versioning.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Behaviours\DragDropBehaviour.cs" />
-    <Compile Include="Actions\ImportSelectedFilesAction.cs" />
-    <Compile Include="Behaviours\MouseDoubleClickBehaviour.cs" />
-    <Compile Include="Behaviours\SelectedItemBehaviour.cs" />
-    <Compile Include="Actions\SplitSelectedFilesAction.cs" />
-    <Compile Include="ApplicationInstance.cs" />
-    <Compile Include="Behaviours\EventBehaviourFactory.cs" />
-    <Compile Include="Behaviours\PreviewDragDropBehaviour.cs" />
-    <Compile Include="Commands\CommandHandler.cs" />
-    <Compile Include="Commands\RelayCommand.cs" />
-    <Compile Include="Common\Constants.cs" />
-    <Compile Include="Controls\Folder\FolderSelectDialog.cs" />
-    <Compile Include="Controls\Folder\Reflector.cs" />
-    <Compile Include="Controls\NumericUpDown.cs" />
-    <Compile Include="Controls\SelectedItemsAwareDataGrid.cs" />
-    <Compile Include="Controls\SortAwareDataGrid.cs" />
-    <Compile Include="Controls\TextBoxWithEllipsis.cs" />
-    <Compile Include="Extensions\ParagraphUnitExtensions.cs" />
-    <Compile Include="Model\AlignmentDataType.cs" />
-    <Compile Include="Model\AlignmentInfo.cs" />
-    <Compile Include="Model\AnalysisBand.cs" />
-    <Compile Include="Model\ConfirmationStatus.cs" />
-    <Compile Include="Model\ContextInfo.cs" />
-    <Compile Include="Model\Element.cs" />
-    <Compile Include="Model\ElementComment.cs" />
-    <Compile Include="Model\ElementGenericPlaceholder.cs" />
-    <Compile Include="Model\ElementLocked.cs" />
-    <Compile Include="Model\ElementPlaceholder.cs" />
-    <Compile Include="Model\ElementSegment.cs" />
-    <Compile Include="Model\ElementTagPair.cs" />
-    <Compile Include="Model\ElementText.cs" />
-    <Compile Include="Model\ExportResult.cs" />
-    <Compile Include="Interfaces\ISegmentInfo.cs" />
-    <Compile Include="Model\MessageInfo.cs" />
-    <Compile Include="Model\OutputFile.cs" />
-    <Compile Include="Model\ParagraphUnitResult.cs" />
-    <Compile Include="Model\SegmentInfoBase.cs" />
-    <Compile Include="Model\SegmentMarkupInfo.cs" />
-    <Compile Include="Model\SegmentPairMap.cs" />
-    <Compile Include="Model\SystemFileInfo.cs" />
-    <Compile Include="Model\FilterItem.cs" />
-    <Compile Include="Model\ImportResult.cs" />
-    <Compile Include="Model\MrkInfo.cs" />
-    <Compile Include="Model\ParagraphInfo.cs" />
-    <Compile Include="Model\ParagraphUnitInfo.cs" />
-    <Compile Include="Model\ProjectFileInfo.cs" />
-    <Compile Include="Model\SegmentIdInfo.cs" />
-    <Compile Include="Model\SegmentPairInfo.cs" />
-    <Compile Include="Model\TokenInfo.cs" />
-    <Compile Include="Providers\DisplayFilter.cs" />
-    <Compile Include="Providers\ParagraphUnitProvider.cs" />
-    <Compile Include="Services\LanguagePlatformSegmentVisitor.cs" />
-    <Compile Include="Services\SegmentGenerator.cs" />
-    <Compile Include="Services\ProjectFileService.cs" />
-    <Compile Include="Services\ContentExporter.cs" />
-    <Compile Include="Services\FilterItemService.cs" />
-    <Compile Include="Services\ProjectService.cs" />
-    <Compile Include="Services\SdlxliffMerger.cs" />
-    <Compile Include="Services\SdlxliffReader.cs" />
-    <Compile Include="Services\SdlxliffImporter.cs" />
-    <Compile Include="Services\SdlxliffExporter.cs" />
-    <Compile Include="Services\SegmentVisitor.cs" />
-    <Compile Include="Services\WordCountProvider.cs" />
-    <Compile Include="TellMe\CommunityAppStoreForumAction.cs" />
-    <Compile Include="TellMe\DocumentationAction.cs" />
-    <Compile Include="TellMe\ImportAction.cs" />
-    <Compile Include="TellMe\SourceCodeAction.cs" />
-    <Compile Include="TellMe\SplitAction.cs" />
-    <Compile Include="TellMe\TellMeProvider.cs" />
-    <Compile Include="Themes\Generic\CustomProgressRing.cs" />
-    <Compile Include="ViewModel\BaseModel.cs" />
-    <Compile Include="Model\ParagraphUnitContext.cs" />
-    <Compile Include="PluginResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PluginResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Services\ContentReader.cs" />
-    <Compile Include="Services\ContentImporter.cs" />
-    <Compile Include="Services\SegmentBuilder.cs" />
-    <Compile Include="StudioViewsEditorController.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\PluginProperties.cs" />
-    <Compile Include="Model\FilterItemGroup.cs" />
-    <Compile Include="ViewModel\MessageBoxViewModel.cs" />
-    <Compile Include="ViewModel\StudioViewsEditorViewModel.cs" />
-    <Compile Include="ViewModel\StudioViewsFilesImportViewModel.cs" />
-    <Compile Include="ViewModel\StudioViewsFilesSplitViewModel.cs" />
-    <Compile Include="View\MessageBoxView.xaml.cs">
-      <DependentUpon>MessageBoxView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\StudioViewsFilesImportView.xaml.cs">
-      <DependentUpon>StudioViewsFilesImportView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\StudioViewsFilesSplitView.xaml.cs">
-      <DependentUpon>StudioViewsFilesSplitView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\StudioViewsEditorView.xaml.cs">
-      <DependentUpon>StudioViewsEditorView.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="SdlCommunity.snk" />
   </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
@@ -231,13 +78,6 @@
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="PluginResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
   <ItemGroup>
     <Content Include="pluginpackage.manifest.xml" />
     <AdditionalFiles Include="ThirdParty\Rws.MultiSelectComboBox.dll">
@@ -264,94 +104,16 @@
     <Resource Include="Resources\StudioViewsMain.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>18.0.1</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Styles\CustomProgressRing.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Styles\DataGridStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\NumberUpDown.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\Buttons.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\ButtonsStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\General.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\ImageStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\MultiSelectComboBox.Custom.ControlTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\MultiSelectComboBox.Custom.DropdownItemTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\MultiSelectComboBox.Custom.Image.Resources.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\MultiSelectComboBox.Custom.SelectedItemTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\MultiSelectComboBox.Resources.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\TextBlockStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Styles\TextBoxStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\Generic.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\Generic\CustomProgressRing.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\MessageBoxView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\StudioViewsFilesImportView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\StudioViewsFilesSplitView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\StudioViewsEditorView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Page Remove="Styles\TextBlockProjectInfoToolTipStyle.xaml" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
