--- a/MicrosoftTranslatorProvider/MicrosoftTranslatorProvider.csproj
+++ b/MicrosoftTranslatorProvider/MicrosoftTranslatorProvider.csproj
@@ -29,72 +29,72 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Reference Include="Microsoft.IdentityModel.Tokens">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Microsoft.IdentityModel.Tokens.dll</HintPath>
+			<HintPath>$(TradosFolder)\Microsoft.IdentityModel.Tokens.dll</HintPath>
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Newtonsoft.Json.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Newtonsoft.Json.dll</HintPath>
 		</Reference>
 		<Reference Include="NLog">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\NLog.dll</HintPath>
+			<HintPath>$(TradosFolder)\NLog.dll</HintPath>
 		</Reference>
 		<Reference Include="PresentationCore" />
 		<Reference Include="PresentationFramework" />
 		<Reference Include="PresentationFramework.Aero" />
 		<Reference Include="Sdl.Core.Globalization">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Core.Globalization.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Globalization.Async">
-		  <HintPath>..\..\..\Program Files (x86)\Trados\Trados Studio\Studio17\Sdl.Core.Globalization.Async.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Globalization.Async">
 		  <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.IntegrationApi">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Desktop.IntegrationApi.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.Platform.Controls">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Desktop.Platform.Controls.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Controls.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.Platform.Styles">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Desktop.Platform.Styles.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.LanguagePlatform.Core">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.LanguagePlatform.Core.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.Core.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.LanguagePlatform.TranslationMemory">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.LanguagePlatform.TranslationMemory.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.TranslationMemory.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.LanguagePlatform.TranslationMemoryApi">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.LanguagePlatform.TranslationMemoryApi.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.TranslationMemoryApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.Core">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.ProjectAutomation.Core.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.FileBased">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.ProjectAutomation.FileBased.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.TellMe.ProviderApi">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.TellMe.ProviderApi.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.TranslationStudioAutomation.IntegrationApi">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.TranslationStudioAutomation.IntegrationApi.Extensions">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.TranslationStudioAutomation.IntegrationApi.Extensions.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.TranslationStudioAutomation.IntegrationApi.Extensions.dll</HintPath>
 		</Reference>
 		<Reference Include="System" />
 		<Reference Include="System.Core" />
 		<Reference Include="System.Drawing" />
 		<Reference Include="System.IdentityModel" />
 		<Reference Include="System.IdentityModel.Tokens.Jwt">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+		  <HintPath>$(TradosFolder)\System.IdentityModel.Tokens.Jwt.dll</HintPath>
 		</Reference>
 		<Reference Include="System.Net.Http" />
 		<Reference Include="System.Text.Json">
-		  <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\System.Text.Json.dll</HintPath>
+		  <HintPath>$(TradosFolder)\System.Text.Json.dll</HintPath>
 		</Reference>
 		<Reference Include="System.Web" />
 		<Reference Include="System.Windows" />
@@ -119,7 +119,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="LanguageMappingProvider" Version="1.0.92" />
-		<PackageReference Include="RestSharp" Version="107.3.0" />
+		<PackageReference Include="RestSharp" Version="112.0.0" />
 		<PackageReference Include="Sdl.Core.PluginFramework">
 			<Version>2.1.0</Version>
 		</PackageReference>
